--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ comfy-table = "6.1"
 const_format = "0.2"
 crc32c = "0.6"
 crossbeam-utils = "0.8.5"
+dashmap = "5.4.0"
 either = "1.8"
 enum-map = "2.4.2"
 enumset = "1.0.12"
